# node-clang

./: CMakeLists.txt  README.md  log  nodeClang.d.ts  nodeClang.js  package.json  pnpm-lock.yaml  test.cpp  test.js  test.ts
loader/: index.js
src/: enum.cpp  lib.h  loader.h  main.cpp  utils.h
src/api/: api.h  cursor.cpp  diag.cpp  enum.cpp  enum.h  index.cpp  tu.cpp  type.cpp
src/class/: build_system.cpp  build_system.h  classes.h  convert.h  cursor.cpp  cursor.h  diagnostic.cpp  diagnostic.h  file.cpp  file.h  global.cpp  global.h  index.cpp  index.h  instance.h  register.cpp  source_location.cpp  source_location.h  translation_unit.cpp  translation_unit.h  type.cpp  type.h  types.h  utils.h
src/enums/: CXCursorKind.cpp  enums.cpp  enums.h
src/loader/: clang.h  lib.h  loader.h
tools/: annotate.ts  generate.ts  load.ts  test.ts  utils.ts
types/: CXCursorKind.d.ts  api.d.ts  base.d.ts  class.d.ts  enum.d.ts  index.d.ts  index.js  types.d.ts
wrapper/: CCursor.ts  CDiagnostic.ts  CDiagnosticSet.ts  CFile.ts  CIndex.ts  CSourceLocation.ts  CSourceRange.ts  CTranslationUnit.ts  CType.ts  index.ts  native.ts
